--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,7 +3,8 @@ env:
   es2021: true
 extends:
   - eslint:recommended
-  - plugin:@typescript-eslint/recommended
+  - plugin:@typescript-eslint/recommended,
+  - prettier
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: latest
