--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
   "author": "jp-knj",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.33.0",
+    "@typescript-eslint/parser": "5.33.0",
+    "eslint": "8.21.0",
+    "eslint-config-prettier": "8.5.0",
+    "prettier": "2.7.1",
     "typescript": "4.7.4",
     "vite": "3.0.4"
   }
