--- a/example/01_preact/package.json
+++ b/example/01_preact/package.json
@@ -12,8 +12,8 @@
     "preact": "^10.10.1"
   },
   "devDependencies": {
-    "@babel/core": ">=7.12.10 <8.0.0\n",
     "@preact/preset-vite": "^2.3.0",
+    "assert-util-types": "0.0.5",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
   }
